# hpkvfs

./: CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  hpkvfs  hpkvfs.c  hpkvfs_design.md
debian/: README.Debian  README.source  changelog  control  copyright  debhelper-build-stamp  files  hpkvfs.cron.d.ex  hpkvfs.substvars  manpage.1.ex  manpage.md.ex  manpage.sgml.ex  manpage.xml.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch.ex
debian/.debhelper/hpkvfs/: dbgsym-build-ids
debian/.debhelper/hpkvfs/dbgsym-root/DEBIAN/: control  md5sums
debian/hpkvfs/DEBIAN/: control  md5sums
debian/hpkvfs/usr/share/doc-base/: hpkvfs.hpkvfs
debian/patches/: .auto-root-init.swp  auto-root-init  series
obj-x86_64-linux-gnu/: CMakeCache.txt  Makefile  cmake_install.cmake  hpkvfs  install_manifest.txt
